--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,22 @@ body {
 .icone {
   height: 100px;
 }
+
+#home-quote {
+  background: url('../img/bg-quote.jpg') no-repeat center center;
+  background-size: cover;
+}
+
+@media (max-width: 767px) {
+  #home-quote .display-4 {
+    font-size: 1.8rem;
+  }
+
+  body {
+    padding-top: 0;
+  }
+
+  .fixed-top {
+    position: relative;
+  }
+}
