--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,11 @@ body {
     position: relative;
   }
 }
+
+.lista-plano li {
+  padding: 1rem;
+}
+
+.lista-plano li + li {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
